[project]
name = "langchain-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyrefly>=0.39.4",
    "ruff>=0.14.3",
]
[tool.pyrefly]
search-path = ["examples/**", "langchain_postgres/**", "tests/**"]
project-includes = ["examples/**", "langchain_postgres/**", "tests/**"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

